Database path changed